force-app/main/default/objects/Debug_Log__c/Debug_Log__c.object-meta.xml
<CustomObject>
    <description>Custom object to store debug log information for community portal debugging</description>
    <label>Debug Log</label>
    <nameField>
        <displayFormat>LOG-{00000000}</displayFormat>
        <label>Debug Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>