force-app/main/default/objects/Debug_Log__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>Name of the Apex class where the log was generated</description>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>