force-app/main/default/objects/Debug_Log__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Additional context information (JSON format)</description>
    <label>Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>