force-app/main/default/objects/Debug_Log__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Log level (ERROR, WARN, INFO, DEBUG)</description>
    <label>Level</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>