force-app/main/default/objects/Debug_Log__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <description>Session ID for correlating related log entries</description>
    <label>Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>