force-app/main/default/objects/Debug_Log__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>User ID who triggered the log entry</description>
    <label>User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>