force-app/main/default/objects/Debug_Log__c/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <description>Type of user (Standard, PowerPartner, Guest, etc.)</description>
    <label>User Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>